--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,7 +44,7 @@
         for (var i = 0; i < result.feed.entries.length; i++) {
           var entry = result.feed.entries[i];
           var div = document.createElement("div");
-          div.innerHTML = "<h1><a href='" + entry.link + "' target='_blank'>" + entry.title + "</a></h1>";
+          div.innerHTML = "<h1><a href='" + entry.link + "'>" + entry.title + "</a></h1>";
           container.appendChild(div);
         }
       }
@@ -57,7 +57,7 @@
         for (var i = 0; i < result.feed.entries.length; i++) {
           var entry = result.feed.entries[i];
           var div = document.createElement("div");
-          div.innerHTML = "<a href='" + entry.link + "' target='_blank'>" + entry.title + "</a>";
+          div.innerHTML = "<a href='" + entry.link + "'>" + entry.title + "</a>";
           container2.appendChild(div);
         }
       }
@@ -70,4 +70,25 @@
   {% if jekyll.environment == 'production' and site.google_analytics %}
   {% include google-analytics.html %}
   {% endif %}
+  <script>
+  if (navigator.userAgent.indexOf("Google Page Speed") == -1) {
+    setTimeout(function() {
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', {
+      trackingId: 'UA-67059182-3',
+      cookieDomain: 'auto',
+      siteSpeedSampleRate: 100,
+      transport: 'beacon',
+    });
+
+    }, 200);
+  }
+
+
+
+  </script>
 </head>
