--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+<html lang="{{ page.lang | default: site.lang | default: "pt-br" }}">
 
   {% include head.html %}
 
@@ -28,10 +28,10 @@
           <div class="column-right" id="column-right" data-turbolinks-permanent>
             <div class="card">
               <div class="card-title">
-                <h1>Elencos Atualizados</h1>
+                <h3>Elencos Atualizados</h3>
               </div>
               <div class="card-subtitle">
-                <h2>Brasileirão 2017</h2>
+                <h4>Brasileirão 2017</h4>
               </div>
               <div class="card-content teams">
                   <img src="{{ "/assets/img/escudos/Atletico-GO-65.png" | relative_url }}" alt="Atlético-GO" title="Atlético-GO">
@@ -58,7 +58,7 @@
             </div>
             <div class="card">
               <div class="card-title">
-                <h1>Notícias</h1>
+                <h3>Notícias</h3>
               </div>
               <div class="card-content news">
                   <div id="feed2"></div>
@@ -66,71 +66,18 @@
             </div>
             <div class="card">
               <div class="card-title">
-                <h1>Opinião</h1>
+                <h3>Página no Facebook</h3>
               </div>
-              <div class="card-content opinion">
-                <div class="author-img">
-                  
-                </div>
-                <blockquote>
-                  <h2>Leandro Prado</h2>
-                  <p>Muito bom o patch! Tem o brasileirão atualizado.</p>
-                </blockquote>
-              </div>
-              <div class="card-content opinion">
-                <div class="author-img">
-                  
-                </div>
-                <blockquote>
-                  <h2>Leandro Prado</h2>
-                  <p>Muito bom o patch! Tem o brasileirão atualizado.</p>
-                </blockquote>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-title">
-                <h1>Opinião</h1>
-              </div>
-              <div class="card-content opinion">
-                <div class="author-img">
-                  
-                </div>
-                <blockquote>
-                  <h2>Lorem ipsum</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </blockquote>
-              </div>
-              <div class="card-content opinion">
-                <div class="author-img">
-                  
-                </div>
-                <blockquote>
-                  <h2>Lorem ipsum</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </blockquote>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-title">
-                <h1>Opinião</h1>
-              </div>
-              <div class="card-content opinion">
-                <div class="author-img">
-                  
-                </div>
-                <blockquote>
-                  <h2>Lorem ipsum</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </blockquote>
-              </div>
-              <div class="card-content opinion">
-                <div class="author-img">
-                  
-                </div>
-                <blockquote>
-                  <h2>Lorem ipsum</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </blockquote>
+              <div class="card-content fb-page">
+                <div id="fb-root"></div>
+                <script>(function(d, s, id) {
+                  var js, fjs = d.getElementsByTagName(s)[0];
+                  if (d.getElementById(id)) return;
+                  js = d.createElement(s); js.id = id;
+                  js.src = 'https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.11';
+                  fjs.parentNode.insertBefore(js, fjs);
+                }(document, 'script', 'facebook-jssdk'));</script>
+                <div class="fb-page" data-href="https://www.facebook.com/theproducoes" data-tabs="timeline" data-width="900px" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/theproducoes" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/theproducoes">The Produções</a></blockquote></div>
               </div>
             </div>
           </div>
@@ -141,7 +88,15 @@
     </main>
 
     {% include footer.html %}
-
+  <script>
+      ga('send', {
+        hitType: 'pageview',
+        title: document.title,
+        location: location.href.split('#')[0],
+        page: location.pathname,
+        transport: 'beacon',
+      });
+  </script>
   </body>
 
 </html>
