--- a/assets/main.scss
+++ b/assets/main.scss
@@ -749,7 +749,8 @@ textarea:focus {
 }
 
 form #saveForm {
-	padding: 5px;
+	padding: 5px 15px 5px 15px;
+	font-size: 16px;
 }
 
 @media (max-width: 600px) {
