--- a/assets/main.scss
+++ b/assets/main.scss
@@ -10,6 +10,10 @@
 }
 a {
 	text-decoration: none;
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+input{
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 html {
 	height: 100%;
