--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -46,7 +46,7 @@ layout: default
           /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
           var disqus_shortname = 'theproducoes'; // required: replace example with your forum shortname
           // var disqus_developer = 1; // Comment out when the site is live
-          var disqus_identifier = "{{ page.url | absolute_url }}";
+          var disqus_identifier = "{{ page.url }}";
 
           /* * * DON'T EDIT BELOW THIS LINE * * */
           (function() {
