Em Breve - Brasileirão 2018

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
   <div class="container">
 
-    <span>&copy 2017 - {{ site.title | escape }}</span>
+    <span>&copy {{ 'now' | date: "%Y" }} - {{ site.title | escape }}</span>
 
   </div>
 
