--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,27 +28,27 @@
           <div class="column-right" id="column-right" data-turbolinks-permanent>
             <div class="card">
               <div class="card-title">
-                <h3>Elencos Atualizados</h3>
+                <h3>Em Breve - Elencos Atualizados</h3>
               </div>
               <div class="card-subtitle">
-                <h4>Brasileirão 2017</h4>
+                <h4>Brasileirão 2018</h4>
               </div>
               <div class="card-content teams">
-                  <img src="{{ "/assets/img/escudos/Atletico-GO-65.png" | relative_url }}" alt="Atlético-GO" title="Atlético-GO">
-                  <img src="{{ "/assets/img/escudos/atletico-pr_2015_65.png" | relative_url }}" alt="Atlético-PR" title="Atlético-PR">
+                  <img src="{{ "/assets/img/escudos/AmericaMG-65.png" | relative_url }}" alt="América-MG" title="América-MG">
                   <img src="{{ "/assets/img/escudos/atletico_mg_60x60.png" | relative_url }}" alt="Atlético-MG" title="Atlético-MG">
-                  <img src="{{ "/assets/img/escudos/avai_60x60_.png" | relative_url }}" alt="Avaí" title="Avaí">
+                  <img src="{{ "/assets/img/escudos/atletico-pr_2015_65.png" | relative_url }}" alt="Atlético-PR" title="Atlético-PR">
                   <img src="{{ "/assets/img/escudos/bahia_60x60.png" | relative_url }}" alt="Bahia" title="Bahia">
                   <img src="{{ "/assets/img/escudos/botafogo_60x60.png" | relative_url }}" alt="Botafogo" title="Botafogo">
-                  <img src="{{ "/assets/img/escudos/corinthians_60x60.png" | relative_url }}" alt="Corinthians" title="Corinthians">
-                  <img src="{{ "/assets/img/escudos/coritiba65.png" | relative_url }}" alt="Coritiba" title="Coritiba">
-                  <img src="{{ "/assets/img/escudos/cruzeiro_65.png" | relative_url }}" alt="Cruzeiro" title="Cruzeiro">
+                  <img src="{{ "/assets/img/escudos/ceara_60x60.png" | relative_url }}" alt="Ceará" title="Ceará">
                   <img src="{{ "/assets/img/escudos/Escudo-Chape-165.png" | relative_url }}" alt="Chapecoense" title="Chapecoense">
+                  <img src="{{ "/assets/img/escudos/corinthians_60x60.png" | relative_url }}" alt="Corinthians" title="Corinthians">
+                  <img src="{{ "/assets/img/escudos/cruzeiro_65.png" | relative_url }}" alt="Cruzeiro" title="Cruzeiro">
                   <img src="{{ "/assets/img/escudos/flamengo_60x60.png" | relative_url }}" alt="Flamengo" title="Flamengo">
                   <img src="{{ "/assets/img/escudos/fluminense_60x60.png" | relative_url }}" alt="Fluminense" title="Fluminense">
                   <img src="{{ "/assets/img/escudos/gremio_60x60.png" | relative_url }}" alt="Grêmio" title="Grêmio">
+                  <img src="{{ "/assets/img/escudos/inter65.png" | relative_url }}" alt="Internacional" title="Internacional">
                   <img src="{{ "/assets/img/escudos/palmeiras_60x60.png" | relative_url }}" alt="Palmeiras" title="Palmeiras">
-                  <img src="{{ "/assets/img/escudos/ponte_preta_60x60.png" | relative_url }}" alt="Ponte Preta" title="Ponte Preta">
+                  <img src="{{ "/assets/img/escudos/parana_60x60.png" | relative_url }}" alt="Paraná" title="Paraná">
                   <img src="{{ "/assets/img/escudos/santos_60x60.png" | relative_url }}" alt="Santos" title="Santos">
                   <img src="{{ "/assets/img/escudos/sao_paulo_60x60.png" | relative_url }}" alt="São Paulo" title="São Paulo">
                   <img src="{{ "/assets/img/escudos/sport65.png" | relative_url }}" alt="Sport" title="Sport">
