--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
           <div class="column-right" id="column-right" data-turbolinks-permanent>
             <div class="card">
               <div class="card-title">
-                <h3>Em Breve - Elencos Atualizados</h3>
+                <h3>Elencos Atualizados</h3>
               </div>
               <div class="card-subtitle">
                 <h4>Brasileirão 2018</h4>
