--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,7 +24,7 @@ layout: default
         <div class="post-img">
           <a href="{{ post.url | relative_url }}">
           <figure>
-            <img src="{{ "/assets/img/posts" | relative_url }}{{ post.image }}" alt="{{ post.title | escape }}" title="{{ post.title | escape }}">
+            <img src="{{ "/assets/img/" | relative_url }}{{ post.image }}" alt="{{ post.title | escape }}" title="{{ post.title | escape }}">
           </figure>
           </a>
         </div>
