--- a/assets/main.scss
+++ b/assets/main.scss
@@ -33,7 +33,7 @@ header {
 	.inner-header {
 		width: 100%;
 		padding: 7px 0 7px 0;
-		background-color: #47BA73;
+		background-color: #9F1617;
 		display: flex;
 		align-items: center;
 		.container {
@@ -75,7 +75,7 @@ header {
 	}
 	.sub-header {
 		width: 100%;
-		background-color: #40A767;
+		background-color: #871314;
 		display: flex;
 		align-items: center;
 		text-align: center;
@@ -115,7 +115,7 @@ header {
 			h1 {
 				a {
 					font-size: 35px;
-					color: #3b9c00;
+					color: #1F6ED4;
 					display: block;
 				}
 			}
@@ -176,7 +176,7 @@ main {
 								font-size: 24px;
 								line-height: 28px;
 								a {
-									color: #3b9c00;
+									color: #1F6ED4;
 								}
 							}
 							span {
@@ -200,7 +200,7 @@ main {
 					margin: 0 0 30px 0;
 					.card-title {
 						height:46px;
-						background-color: #3b9c00;
+						background-color: #871314;
 						display: flex;
 						align-items: center;
 						padding: 0px 16px 0px 16px;
@@ -269,7 +269,7 @@ main {
 						#feed2 {
 							div {
 								a {
-									color: #3b9c00;
+									color: #1F6ED4;
 									font-size: 18px;
 									border-bottom: 1px solid #E6E6E6;
 									display: block;
@@ -350,7 +350,7 @@ article {
 
 footer {
 	width: 100%;
-	background-color: #40A767;
+	background-color: #9F1617;
 	.container {
 		display: flex;
 		justify-content: center;
