--- a/assets/main.scss
+++ b/assets/main.scss
@@ -294,7 +294,7 @@ article {
 		}
 	}
 	.post-content {
-		margin: 0 0 20px 0;
+		margin: 0 0 0px 0;
 		figure {
 			display: block;
 			text-align: center;
@@ -315,6 +315,10 @@ article {
     		line-height: 27px;
 			color: #484848;
 			margin: 0 0 15px 0;
+		}
+		h2 {
+			color: #218C74;
+			margin-bottom: 12px;
 		}
 		ul {
 			font-size: 18px;
@@ -571,6 +575,9 @@ footer {
 		}
 	}
 }
+.download {
+	margin-bottom: 15px;
+}
 /**
  * Download button
  * 1. Make the button a block level element while giving the ability to put several of them on the same line
@@ -586,7 +593,8 @@ footer {
 .download-button {
   display: inline-block; /* 1 */
   margin-right: 10px; /* 2 */
-  margin-top: 15px; /* 3 */
+  margin-top: 5px; /* 3 */
+  margin-bottom: 5px;
   padding: 30px 30px 30px 80px; /* 4 */
   color: #686868; /* 5 */
   text-decoration: none; /* 6 */
