--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,6 +66,27 @@
             </div>
             <div class="card">
               <div class="card-title">
+                <h3>Parceiros</h3>
+              </div>
+              <div class="card-content partners">
+                  <div class="partner-banner">
+                    <a href="https://www.youtube.com/channel/UCzmRDkcHmcAyJtMNaRNXLzA">
+                      <img src="{{ "/assets/img/parceiros/a-lukas-games.jpg" | relative_url }}" alt="A. Lukas Games" title="A. Lukas Games">
+                    </a>
+                    <a href="https://www.youtube.com/channel/UC-5WMNvfVLQoRwBCvH8hzwQ">
+                      <img src="{{ "/assets/img/parceiros/tomael-isoton.jpg" | relative_url }}" alt="Tomael Isoton" title="Tomael Isoton">
+                    </a>
+                    <a href="https://wvinformaticapublicidade.blogspot.com.br/">
+                      <img src="{{ "/assets/img/parceiros/wv-informatica.jpg" | relative_url }}" alt="WV Informática" title="WV Informática">
+                    </a>
+                  </div>
+                  <div class="partner-name">
+                    <a href="#"></a>
+                  </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-title">
                 <h3>Página no Facebook</h3>
               </div>
               <div class="card-content fb-page">
