--- a/_includes/header.html
+++ b/_includes/header.html
@@ -68,6 +68,9 @@
           <li><a href="{{ "/2017/11/ultimate-dvd-fifa-08/" | relative_url }}">Ultimate DVD</a></li>
           <li><a href="{{ "/2017/11/fat-master-08/" | relative_url }}">FAT Master</a></li>
           <li><a href="{{ "/contato/" | relative_url }}">Contato</a></li>
+          <!--<li id="logar"><a href="{{ "/login/" | relative_url }}" target="_self">Login</a></li>-->
+          <li id="logado" style="display:none;"><a href="{{ "/login/" | relative_url }}">Vip</a></li>
+          <li id="deslogar" style="display:none;"><a href="{{ "/login/" | relative_url }}" target="_self">Sair</a></li>
         </ul>
       </nav>
     </div>
