--- a/assets/main.scss
+++ b/assets/main.scss
@@ -226,6 +226,28 @@ main {
 							color: #333;
 						}
 					}
+					.card-content.next-updates {
+						text-align: center;
+						padding: 10px 7px 10px 7px;
+						p {
+							color: #999;
+						}
+						.button {
+							margin-top: 10px;
+							a {
+								padding: 7px 18px;
+							    border: 1px solid #eee;
+							    margin-left: -2px;
+							    margin-right: -2px;
+							    background-color: #ffffff;
+							    display: inline-block;
+							}
+							a:hover {
+								background-color: #f1f1f1;
+								color: #333; 
+							}
+						}
+					}
 					.card-content.teams {
 						text-align: center;
 						padding: 10px 7px 10px 7px;
@@ -366,6 +388,111 @@ article {
     text-align: center;
 }
 
+
+.content-wrapper{
+font-family: lato, sans-serif;
+font-style: normal;
+font-weight: 400;
+	}
+
+.content-wrapper p {font-size:1.4em;}
+
+.faq-header{
+  font-size: 42px;
+  border-bottom: 1px dotted #ccc;
+  padding: 24px;
+}
+
+.faq-content {
+  margin: 0 auto;
+
+}
+
+.faq-question {
+  padding: 20px 0;
+  border-bottom: 1px dotted #ccc;
+}
+
+.panel-title {
+  font-size: 24px;
+  width: 100%;
+  position: relative;
+  margin: 0;
+  padding: 10px 10px 0 60px;
+  display: block;
+  cursor: pointer;
+}
+
+.panel-content {
+  color:#6e6e6e;
+  font-size: 20px;
+  padding: 0px 14px;
+  margin: 0 50px;
+  height: 0;
+  overflow: hidden;
+  z-index: 1;
+  position: relative;
+  opacity: 0;
+  -webkit-transition: .4s ease;
+  -moz-transition: .4s ease;
+  -o-transition: .4s ease;
+  transition: .4s ease;
+}
+
+.panel:checked ~ .panel-content{
+  height: auto;
+  opacity: 1;
+  padding: 14px;
+}
+
+.plus {
+  color:#e12826;
+  position: absolute;
+  left:0;
+  margin-left: 10px;
+  margin-top: -8px;
+  z-index: 5;
+  font-size: 42px;
+  line-height: 100%;
+  -webkit-user-select: none;    
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  -webkit-transition: .4s ease;
+  -moz-transition: .4s ease;
+  -o-transition: .4s ease;
+  transition: .4s ease;
+}
+
+
+.panel:checked ~ .panel-title >.plus {
+   margin-top: 0px;
+  -webkit-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+
+.panel {
+  display: none;
+}
+
+@media (max-width: 514px) {
+                .faq-header {
+                      font-size:25px;
+                      padding-top:24px;
+                      padding-bottom: 18px;
+}
+                .panel-content {
+                margin: 0px 0px 0px 50px; 
+}
+		.panel-title {
+                     font-size: 18px;
+                     width:80%;
+		}
+}
+
 footer {
 	width: 100%;
 	background-color: #9F1617;
@@ -425,29 +552,6 @@ footer {
  	}
 }
 @media screen and (max-width: 960px) {
-	main {
-		.container {
-			.columns {
-				flex-flow: row wrap;
-				.column-left {
-					flex: 1 2 510px;
-				}
-				.column-right {
-					flex: none;
-				    display: flex;
-				    width: 780px;
-				    height: 1400px;
-				    flex-direction: column;
-				    flex-flow: column wrap;
-				    align-items: center;
-				    justify-content: flex-start;
-				    margin: 0 auto;
-				}
-			}
-		}
-	}
-}
-@media screen and (max-width: 880px) {
 	main {
 		.container {
 			.columns {
