--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
             {{ content }}
           </div>
           <div class="column-right" id="column-right" data-turbolinks-permanent>
-            <div class="card">
+            <!--<div class="card">
               <div class="card-title">
                 <h3>Na próxima atualização</h3>
               </div>
@@ -38,7 +38,7 @@
                     <a href="{{ "/na-proxima-atualizacao/" | relative_url }}">Ver mais »</a>
                   </div>
               </div>
-            </div>
+            </div>-->
             <div class="card">
               <div class="card-title">
                 <h3>Elencos Atualizados</h3>
