--- a/assets/main.scss
+++ b/assets/main.scss
@@ -229,6 +229,12 @@ main {
 					.card-content.next-updates {
 						text-align: center;
 						padding: 10px 7px 10px 7px;
+						ul {
+							margin-left: 25px;
+							width: 300px;
+							text-align: left;
+							color: #999;
+						}
 						p {
 							color: #999;
 						}
