--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,12 +31,17 @@
                 <h3>Na próxima atualização</h3>
               </div>
               <div class="card-content next-updates">
-                  {% for update in site.data.updates limit:5 %}
-                    <p>{{ update.name }}</p>
-                  {% endfor %}
+                {% for update in site.data.updates limit:5 %}
+                  <ul>
+                    <li>{{ update.name }}</li>
+                  </ul>
+                  {% assign update_counter = update_counter | plus:1 %}
+                {% endfor %}
+                {% if update_counter > 5 %}
                   <div class="button">
                     <a href="{{ "/na-proxima-atualizacao/" | relative_url }}">Ver mais »</a>
                   </div>
+                {% endif %}
               </div>
             </div>-->
             <div class="card">
@@ -44,29 +49,29 @@
                 <h3>Elencos Atualizados</h3>
               </div>
               <div class="card-subtitle">
-                <h4>Brasileirão 2018</h4>
+                <h4>Brasileirão 2019</h4>
               </div>
               <div class="card-content teams">
-                  <img src="{{ "/assets/img/escudos/AmericaMG-65.png" | relative_url }}" alt="América-MG" title="América-MG">
-                  <img src="{{ "/assets/img/escudos/atletico_mg_60x60.png" | relative_url }}" alt="Atlético-MG" title="Atlético-MG">
                   <img src="{{ "/assets/img/escudos/athletico-pr_65.png" | relative_url }}" alt="Athletico-PR" title="Athletico-PR">
+                  <img src="{{ "/assets/img/escudos/atletico_mg_60x60.png" | relative_url }}" alt="Atlético-MG" title="Atlético-MG">
+                  <img src="{{ "/assets/img/escudos/avai_60x60_.png" | relative_url }}" alt="Avaí" title="Avaí">
                   <img src="{{ "/assets/img/escudos/bahia_60x60.png" | relative_url }}" alt="Bahia" title="Bahia">
                   <img src="{{ "/assets/img/escudos/botafogo_60x60.png" | relative_url }}" alt="Botafogo" title="Botafogo">
                   <img src="{{ "/assets/img/escudos/ceara_60x60.png" | relative_url }}" alt="Ceará" title="Ceará">
                   <img src="{{ "/assets/img/escudos/Escudo-Chape-165.png" | relative_url }}" alt="Chapecoense" title="Chapecoense">
                   <img src="{{ "/assets/img/escudos/corinthians_60x60.png" | relative_url }}" alt="Corinthians" title="Corinthians">
                   <img src="{{ "/assets/img/escudos/cruzeiro_65.png" | relative_url }}" alt="Cruzeiro" title="Cruzeiro">
+                  <img src="{{ "/assets/img/escudos/CSA_65.png" | relative_url }}" alt="CSA" title="CSA">
                   <img src="{{ "/assets/img/escudos/flamengo_60x60.png" | relative_url }}" alt="Flamengo" title="Flamengo">
                   <img src="{{ "/assets/img/escudos/fluminense_60x60.png" | relative_url }}" alt="Fluminense" title="Fluminense">
+                  <img src="{{ "/assets/img/escudos/fortaleza_65x65.png" | relative_url }}" alt="Fortaleza" title="Fortaleza">
+                  <img src="{{ "/assets/img/escudos/goias_60x60.png" | relative_url }}" alt="Goiás" title="Goiás">
                   <img src="{{ "/assets/img/escudos/gremio_60x60.png" | relative_url }}" alt="Grêmio" title="Grêmio">
                   <img src="{{ "/assets/img/escudos/inter65.png" | relative_url }}" alt="Internacional" title="Internacional">
                   <img src="{{ "/assets/img/escudos/palmeiras_60x60.png" | relative_url }}" alt="Palmeiras" title="Palmeiras">
-                  <img src="{{ "/assets/img/escudos/parana_60x60.png" | relative_url }}" alt="Paraná" title="Paraná">
                   <img src="{{ "/assets/img/escudos/santos_60x60.png" | relative_url }}" alt="Santos" title="Santos">
                   <img src="{{ "/assets/img/escudos/sao_paulo_60x60.png" | relative_url }}" alt="São Paulo" title="São Paulo">
-                  <img src="{{ "/assets/img/escudos/sport65.png" | relative_url }}" alt="Sport" title="Sport">
                   <img src="{{ "/assets/img/escudos/Vasco-65.png" | relative_url }}" alt="Vasco" title="Vasco">
-                  <img src="{{ "/assets/img/escudos/vitoria_60x60.png" | relative_url }}" alt="Vitória" title="Vitória">
               </div>
             </div>
             <div class="card">
