--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,7 +85,7 @@
                   </div>
               </div>
             </div>
-            <div class="card">
+            <!--<div class="card">
               <div class="card-title">
                 <h3>Trabalhos recentes</h3>
               </div>
@@ -102,7 +102,7 @@
                   </div>
                 {% endif %}
               </div>
-            </div>
+            </div>-->
             <div class="card">
               <div class="card-title">
                 <h3>Página no Facebook</h3>
